# pro-bridge

./: .env.example  .gitignore  LICENSE  README.md  debug_ask.py  probe_dom.py  pyproject.toml  requirements.txt  selftest.py
commands/: debate-high.md
pro_bridge/: __init__.py  chatgpt.py  config.py  server.py
scripts/: start-all.ps1  start-all.sh  start-chrome-debug.ps1  start-chrome-debug.sh
